@@ -83,3 +83,24 @@ endfunction
 %!demo
 %! [x, y, z] = peaks (20);
 %! scatter3 (x(:), y(:), z(:), [], z(:));
+
+%!demo
+%! x = rand (20,1);
+%! y = rand (20,1);
+%! z = rand (20,1);
+%! scatter3 (x(:), y(:), z(:), 10, z(:), "s");
+
+%!demo
+%! x = rand (20,1);
+%! y = rand (20,1);
+%! z = rand (20,1);
+%! scatter3 (x(:), y(:), z(:), 20*z(:), z(:), "s");
+
+%!demo
+%! x = rand (20,1);
+%! y = rand (20,1);
+%! z = rand (20,1);
+%! scatter3 (x(:), y(:), z(:), 20*z(:), [], "s");
+
+
+
